--- a/css/main.css
+++ b/css/main.css
@@ -13,3 +13,10 @@
 	background: rgba(0, 0, 0, 0.4);
     padding: 20px 20px;
 }
+.navbar-brand {
+  padding: 0px;
+}
+.navbar-brand>img {
+  height: 100%;
+  width: auto;
+}
